# testjob_digital

./: .env.db  README.md  TASK.md  docker-compose.yml  pyproject.toml  runer
app/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
app/core/: api.py  filters.py
app/core/management/commands/: adddata.py
app/core/migrations/: 0001_initial.py
app/core/static/core/js/: main.js
app/core/templates/core/: index.html
app/indicators/: .settings.py.swp  asgi.py  settings.py  urls.py
indicators/: manage.py
indicators/core/: admin.py  api.py  filters.py  models.py  serializers.py  urls.py  views.py
indicators/core/management/commands/: adddata.py  makeusers.py
indicators/core/migrations/: 0001_initial.py  0002_alter_indicator_date.py
indicators/core/static/core/js/: main.js
indicators/core/templates/core/: index.html
indicators/indicators/: settings.py  urls.py  wsgi.py
nginx/: nginx.conf
